<resources>
    <string name="app_name">My Application</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="soheib">Soheib</string>
    <string name="picture_test" />
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>